youfull/objects/Action_Items__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item_Type__c</fullName>
        <label>Action Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Downline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Orders Not submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders under minimum to earn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders on Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum Order Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additions / Reinstatements / Removals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA 1-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.A.T.D. Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking &amp; Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inherited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Received Billed and Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Product no activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New and In-Progress Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep No Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Promoted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Received In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Over Minimum to earn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1 Candidates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rising Stars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Datatype__c</fullName>
        <label>Datatype</label>
        <picklist>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Genealogy_Criteria_Fld__c</fullName>
        <inlineHelpText>Used for markets with Mail Plan enabled</inlineHelpText>
        <label>Genealogy Criteria Fld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Criteria_Fld__c</fullName>
        <label>Lead Criteria Fld</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Criteria_Fld__c</fullName>
        <inlineHelpText>Used for Downline based action items for Mail Plan enabled Markets</inlineHelpText>
        <label>Order Criteria Fld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Criteria_Fld__c</fullName>
        <inlineHelpText>Used for Markets that are mail plan enabled</inlineHelpText>
        <label>Rep Criteria Fld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smry_Criteria_Fld__c</fullName>
        <description>field will be populated in cases where the Summary Record should be used.  Primarily two scenarios:
Current Business (for all Markets)
Orders (for Markets with Mail Plans)
Sales (for Markets with Mail Plans)</description>
        <inlineHelpText>This field will be populated in cases where the Summary Record should be used.  Main scenarios:
- Current Business (for all Markets)
- Orders (for Markets without Mail Plans)
- Sales (for Markets without Mail Plans)</inlineHelpText>
        <label>Smry Criteria Fld</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject_Area__c</fullName>
        <label>Subject Area</label>
        <picklist>
            <picklistValues>
                <fullName>Coaching Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Personal Reps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone_Or_Leader__c</fullName>
        <label>Zone Or Leader</label>
        <picklist>
            <picklistValues>
                <fullName>Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Item</label>
    <nameField>
        <label>Action Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>